--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.pptx
 courses/OOAD_Sp21/lectures/01_introductionToStaff.pdf
 courses/OOAD_Sp21/lectures/02_introductionToCourse.pdf
+courses/OOAD_Sp21/lectures/03_introductionToProjects.pdf
