--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 courses/OOAD_Sp21/lectures/01_introductionToStaff.pdf
 courses/OOAD_Sp21/lectures/02_introductionToCourse.pdf
 courses/OOAD_Sp21/lectures/03_introductionToProjects.pdf
+courses/OOAD_Sp21/Sharma, Vasu_signed.pdf
