--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ courses/OOAD_Sp21/lectures/01_introductionToStaff.pdf
 courses/OOAD_Sp21/lectures/02_introductionToCourse.pdf
 courses/OOAD_Sp21/lectures/03_introductionToProjects.pdf
 courses/OOAD_Sp21/Sharma, Vasu_signed.pdf
+courses/OOAD_Sp21/lectures/04_OO Paradigm.pdf
+courses/OOAD_Sp21/lectures/ZoomCloudRecordings.docx
+courses/OOAD_Sp21/lectures/ZoomCloudRecordings.pdf
+courses/OOAD_Sp21/lectures/~$omCloudRecordings.docx
