--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ courses/OOAD_Sp21/lectures/04_OO Paradigm.pdf
 courses/OOAD_Sp21/lectures/ZoomCloudRecordings.docx
 courses/OOAD_Sp21/lectures/ZoomCloudRecordings.pdf
 courses/OOAD_Sp21/lectures/~$omCloudRecordings.docx
+courses/OOAD_Sp21/lectures/05 - Git Intro.pdf
+courses/OOAD_Sp21/lectures/06-DesignFest__CRCcards.pdf
+courses/OOAD_Sp21/lectures/gitintro.key
