uploaded Streams demo, and updated Grad Project proposal

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ courses/OOAD_Sp21/lectures/~$omCloudRecordings.docx
 courses/OOAD_Sp21/lectures/05 - Git Intro.pdf
 courses/OOAD_Sp21/lectures/06-DesignFest__CRCcards.pdf
 courses/OOAD_Sp21/lectures/gitintro.key
+courses/OOAD_Sp21/lectures/07-OO Fundamentals.pdf
+courses/OOAD_Sp21/lectures/08-IntroToJava.pdf
