updated schedule for week of Feb 8

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ courses/OOAD_Sp21/lectures/06-DesignFest__CRCcards.pdf
 courses/OOAD_Sp21/lectures/gitintro.key
 courses/OOAD_Sp21/lectures/07-OO Fundamentals.pdf
 courses/OOAD_Sp21/lectures/08-IntroToJava.pdf
+courses/OOAD_Sp21/09-GradStudentPitches_Day1.pdf
+courses/OOAD_Sp21/FlexPlan_Disability_ResponseSummary.pdf
+courses/OOAD_Sp21/iss_agreement_AbhasPrasad signedBoth.pdf
+courses/OOAD_Sp21/iss_agreement_Vasu_Sharma_signedByBoth.pdf
+courses/OOAD_Sp21/lectures/AsyncOOA_proposals.pdf
