clarified the research track 3

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ courses/OOAD_Sp21/FlexPlan_Disability_ResponseSummary.pdf
 courses/OOAD_Sp21/iss_agreement_AbhasPrasad signedBoth.pdf
 courses/OOAD_Sp21/iss_agreement_Vasu_Sharma_signedByBoth.pdf
 courses/OOAD_Sp21/lectures/AsyncOOA_proposals.pdf
+courses/OOAD_Sp21/lectures/10_CandidConversation_Projects.pdf
