--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ courses/OOAD_Sp21/iss_agreement_AbhasPrasad signedBoth.pdf
 courses/OOAD_Sp21/iss_agreement_Vasu_Sharma_signedByBoth.pdf
 courses/OOAD_Sp21/lectures/AsyncOOA_proposals.pdf
 courses/OOAD_Sp21/lectures/10_CandidConversation_Projects.pdf
+courses/OOAD_Sp21/lectures/11- UML with Exercise.pdf
+courses/OOAD_Sp21/lectures/12_TestDrivenDevelopment.pdf
+courses/OOAD_Sp21/lectures/UMLclassDiagram_Solution.pdf
