added XP readings

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ courses/OOAD_Sp21/lectures/10_CandidConversation_Projects.pdf
 courses/OOAD_Sp21/lectures/11- UML with Exercise.pdf
 courses/OOAD_Sp21/lectures/12_TestDrivenDevelopment.pdf
 courses/OOAD_Sp21/lectures/UMLclassDiagram_Solution.pdf
+courses/OOAD_Sp21/lectures/13-UML-part2.ppt
