updated schedule for week of march 1st

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@ courses/OOAD_Sp21/lectures/12_TestDrivenDevelopment.pdf
 courses/OOAD_Sp21/lectures/UMLclassDiagram_Solution.pdf
 courses/OOAD_Sp21/lectures/13-UML-part2.ppt
 courses/OOAD_Sp21/lectures/13-UML-part2.pdf
+courses/OOAD_Sp21/gradProjectMilestones/1_malwalaarachchigemalinda_LATE_381174_29504676_Malinda_ presentation-1.pdf
+courses/OOAD_Sp21/gradProjectMilestones/2_reynoldsjarek_289009_29458876_teamLazeradeSlides.pdf
+courses/OOAD_Sp21/gradProjectMilestones/bhasinakshita_340194_29468248_PPT_AbhijeetAkshitaAnusha_GradProjectMilestone1_TopicOutline.pdf
+courses/OOAD_Sp21/gradProjectMilestones/burkedevin_LATE_262551_29505383_CSCI5488_Proposal_Slides.pdf
+courses/OOAD_Sp21/gradProjectMilestones/chernindenver_268749_29405554_John_Denver_Milestone1_Presentation.pdf
+courses/OOAD_Sp21/gradProjectMilestones/hallockkevin_348691_29466216_grad-project-milestone1-presentation-hallock-yin-kulkarni-shankar.pdf
+courses/OOAD_Sp21/gradProjectMilestones/jensenemily_310790_29360303_Grad Track 2 project Slides.pdf
+courses/OOAD_Sp21/gradProjectMilestones/praharajkaran_370517_29502980_CSCI 5448 Presentation Milestone 1.pdf
+courses/OOAD_Sp21/gradProjectMilestones/z_albindreycey_362667_29461158_milestone1_presentation-1.pdf
+courses/OOAD_Sp21/lectures/15-XP.pdf
+courses/OOAD_Sp21/lectures/16_IntroToDesignPatterns.pdf
