--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ courses/OOAD_Sp21/gradProjectMilestones/praharajkaran_370517_29502980_CSCI 5448 
 courses/OOAD_Sp21/gradProjectMilestones/z_albindreycey_362667_29461158_milestone1_presentation-1.pdf
 courses/OOAD_Sp21/lectures/15-XP.pdf
 courses/OOAD_Sp21/lectures/16_IntroToDesignPatterns.pdf
+courses/OOAD_Sp21/lectures/17-Observer.pdf
+courses/OOAD_Sp21/lectures/18-Observer.pdf
+courses/OOAD_Sp21/lectures/19-Decorator.pdf
