--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ courses/OOAD_Sp21/lectures/16_IntroToDesignPatterns.pdf
 courses/OOAD_Sp21/lectures/17-Observer.pdf
 courses/OOAD_Sp21/lectures/18-Observer.pdf
 courses/OOAD_Sp21/lectures/19-Decorator.pdf
+courses/OOAD_Sp21/Head_First_Design_Patterns_Second_Edition.pdf
+courses/OOAD_Sp21/lectures/20-Factory.pdf
