--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ courses/OOAD_Sp21/lectures/18-Observer.pdf
 courses/OOAD_Sp21/lectures/19-Decorator.pdf
 courses/OOAD_Sp21/Head_First_Design_Patterns_Second_Edition.pdf
 courses/OOAD_Sp21/lectures/20-Factory.pdf
+courses/OOAD_Sp21/SampleMidterm Exam_ Statistics_Bruce.pdf
