--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ courses/OOAD_Sp21/lectures/19-Decorator.pdf
 courses/OOAD_Sp21/Head_First_Design_Patterns_Second_Edition.pdf
 courses/OOAD_Sp21/lectures/20-Factory.pdf
 courses/OOAD_Sp21/SampleMidterm Exam_ Statistics_Bruce.pdf
+courses/OOAD_Sp21/lectures/21-Singleton.pdf
+courses/OOAD_Sp21/lectures/project/Milestone #2-DueFebruary 21.pdf
+courses/OOAD_Sp21/lectures/project/Milestone #3 Due March 5.pdf
+courses/OOAD_Sp21/lectures/project/Milestone #4_DueMarch19.pdf
