pushed grad project M2

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ courses/OOAD_Sp21/lectures/21-Singleton.pdf
 courses/OOAD_Sp21/lectures/project/Milestone #2-DueFebruary 21.pdf
 courses/OOAD_Sp21/lectures/project/Milestone #3 Due March 5.pdf
 courses/OOAD_Sp21/lectures/project/Milestone #4_DueMarch19.pdf
+courses/OOAD_Sp21/lectures/23-Command.pdf
