added Final exam date

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ courses/OOAD_Sp21/lectures/project/Milestone #2-DueFebruary 21.pdf
 courses/OOAD_Sp21/lectures/project/Milestone #3 Due March 5.pdf
 courses/OOAD_Sp21/lectures/project/Milestone #4_DueMarch19.pdf
 courses/OOAD_Sp21/lectures/23-Command.pdf
+courses/OOAD_Sp21/InformalEarlyFeedback_CSCI4448.docx
+courses/OOAD_Sp21/InformalEarlyFeedback_CSCI5448.docx
+courses/OOAD_Sp21/lectures/24-Command.pdf
