--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ courses/OOAD_Sp21/lectures/23-Command.pdf
 courses/OOAD_Sp21/InformalEarlyFeedback_CSCI4448.docx
 courses/OOAD_Sp21/InformalEarlyFeedback_CSCI5448.docx
 courses/OOAD_Sp21/lectures/24-Command.pdf
+courses/OOAD_Sp21/lectures/25-Inspirations_CareerPaths.pdf
+courses/OOAD_Sp21/lectures/Inspirations_CareerPaths.odp
