--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ courses/OOAD_Sp21/InformalEarlyFeedback_CSCI5448.docx
 courses/OOAD_Sp21/lectures/24-Command.pdf
 courses/OOAD_Sp21/lectures/25-Inspirations_CareerPaths.pdf
 courses/OOAD_Sp21/lectures/Inspirations_CareerPaths.odp
+courses/OOAD_Sp21/EIF_forms_results/University of Colorado Boulder Mail - please synthesize information from Early Informal Feedback.pdf
+courses/OOAD_Sp21/lectures/26-DesignPatternPrinciples.pdf
+courses/OOAD_Sp21/lectures/27-Refactoring.pdf
+courses/OOAD_Sp21/lectures/27-Refactoring.ppt
+courses/OOAD_Sp21/lectures/28-RefactoringResearch.pdf
