updated M3 for grad students

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ courses/OOAD_Sp21/lectures/26-DesignPatternPrinciples.pdf
 courses/OOAD_Sp21/lectures/27-Refactoring.pdf
 courses/OOAD_Sp21/lectures/27-Refactoring.ppt
 courses/OOAD_Sp21/lectures/28-RefactoringResearch.pdf
+courses/OOAD_Sp21/lectures/29_Clones_Refactoring.pdf
+courses/OOAD_Sp21/lectures/30_Clones_Refactoring.pdf
