--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ courses/OOAD_Sp21/lectures/27-Refactoring.ppt
 courses/OOAD_Sp21/lectures/28-RefactoringResearch.pdf
 courses/OOAD_Sp21/lectures/29_Clones_Refactoring.pdf
 courses/OOAD_Sp21/lectures/30_Clones_Refactoring.pdf
+courses/OOAD_Sp21/lectures/31-CompositeAndVisitor.pdf
+courses/OOAD_Sp21/lectures/31-CompositeVisitor.ppt
