added the grad project final submission

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ courses/OOAD_Sp21/lectures/29_Clones_Refactoring.pdf
 courses/OOAD_Sp21/lectures/30_Clones_Refactoring.pdf
 courses/OOAD_Sp21/lectures/31-CompositeAndVisitor.pdf
 courses/OOAD_Sp21/lectures/31-CompositeVisitor.ppt
+courses/OOAD_Sp21/Deleted_Milestone #6 Due Friday April 16.pdf
+courses/OOAD_Sp21/lectures/32-TemplateMethod-Facade-Adapter.pdf
+courses/OOAD_Sp21/lectures/32-TemplateMethod-Facade-Adapter.ppt
+courses/OOAD_Sp21/lectures/RefactoringResearch_all.pdf
