--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ courses/OOAD_Sp21/Deleted_Milestone #6 Due Friday April 16.pdf
 courses/OOAD_Sp21/lectures/32-TemplateMethod-Facade-Adapter.pdf
 courses/OOAD_Sp21/lectures/32-TemplateMethod-Facade-Adapter.ppt
 courses/OOAD_Sp21/lectures/RefactoringResearch_all.pdf
+courses/OOAD_Sp21/lectures/33-ArchitecturalPatterns.pdf
+courses/OOAD_Sp21/lectures/33-ArchitecturalPatterns.ppt
