--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,12 @@ courses/OOAD_Sp21/lectures/32-TemplateMethod-Facade-Adapter.ppt
 courses/OOAD_Sp21/lectures/RefactoringResearch_all.pdf
 courses/OOAD_Sp21/lectures/33-ArchitecturalPatterns.pdf
 courses/OOAD_Sp21/lectures/33-ArchitecturalPatterns.ppt
+courses/OOAD_Sp21/Final Grad Project/02_Graduate Project Final - Liu and Praharaj.pdf
+courses/OOAD_Sp21/Final Grad Project/03_OOP_Grad_Milestone3_Results.pdf
+courses/OOAD_Sp21/Final Grad Project/04_Final Presentation- Denver & John.pdf
+courses/OOAD_Sp21/lectures/34-OOADcourseReview.pdf
+courses/OOAD_Sp21/lectures/34-OOADcourseReview.ppt
+courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_05-03-21_ParticipationOnly.csv
+courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_Reef_05-03-21_PerformanceAndParticipation.csv
+courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_ReefExtended_05-03-21.numbers
+courses/OOAD_Sp21/lectures/~$34-OOADcourseReview.ppt
