--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,9 @@ courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_05-03-21_Participatio
 courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_Reef_05-03-21_PerformanceAndParticipation.csv
 courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_ReefExtended_05-03-21.numbers
 courses/OOAD_Sp21/lectures/~$34-OOADcourseReview.ppt
+courses/OOAD_Sp21/lectures/grades/2021-05-07T1450_Grades-CSCI_4448-5448-001,003.csv
+*.xlsx
+*.csv
+*.xls
+courses/OOAD_Sp21/lectures/grades/gradesForRoster_5448_01.csv.sb-3f919454-4mNxTL/63EDDA10.MACTF
+courses/csci7000-005_F21/welcome.txt
