--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ courses/OOAD_Sp21/lectures/grades/2021-05-07T1450_Grades-CSCI_4448-5448-001,003.
 *.xls
 courses/OOAD_Sp21/lectures/grades/gradesForRoster_5448_01.csv.sb-3f919454-4mNxTL/63EDDA10.MACTF
 courses/csci7000-005_F21/welcome.txt
+courses/OOAD_Sp21/lectures/FCQs/FCQs -4448- Campus Labs.pdf
+courses/OOAD_Sp21/lectures/FCQs/OfflineSection003- Campus Labs.pdf
