--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ courses/OOAD_Sp21/lectures/grades/gradesForRoster_5448_01.csv.sb-3f919454-4mNxTL
 courses/csci7000-005_F21/welcome.txt
 courses/OOAD_Sp21/lectures/FCQs/FCQs -4448- Campus Labs.pdf
 courses/OOAD_Sp21/lectures/FCQs/OfflineSection003- Campus Labs.pdf
+courses/OOAD_Sp21/~$ the CEAS Spalding Awards for TA Excellence committee.docx
