--- a/.gitignore
+++ b/.gitignore
@@ -1,86 +1,4 @@
 
-*.pptx
-courses/OOAD_Sp21/lectures/01_introductionToStaff.pdf
-courses/OOAD_Sp21/lectures/02_introductionToCourse.pdf
-courses/OOAD_Sp21/lectures/03_introductionToProjects.pdf
-courses/OOAD_Sp21/Sharma, Vasu_signed.pdf
-courses/OOAD_Sp21/lectures/04_OO Paradigm.pdf
-courses/OOAD_Sp21/lectures/ZoomCloudRecordings.docx
-courses/OOAD_Sp21/lectures/ZoomCloudRecordings.pdf
-courses/OOAD_Sp21/lectures/~$omCloudRecordings.docx
-courses/OOAD_Sp21/lectures/05 - Git Intro.pdf
-courses/OOAD_Sp21/lectures/06-DesignFest__CRCcards.pdf
-courses/OOAD_Sp21/lectures/gitintro.key
-courses/OOAD_Sp21/lectures/07-OO Fundamentals.pdf
-courses/OOAD_Sp21/lectures/08-IntroToJava.pdf
-courses/OOAD_Sp21/09-GradStudentPitches_Day1.pdf
-courses/OOAD_Sp21/FlexPlan_Disability_ResponseSummary.pdf
-courses/OOAD_Sp21/iss_agreement_AbhasPrasad signedBoth.pdf
-courses/OOAD_Sp21/iss_agreement_Vasu_Sharma_signedByBoth.pdf
-courses/OOAD_Sp21/lectures/AsyncOOA_proposals.pdf
-courses/OOAD_Sp21/lectures/10_CandidConversation_Projects.pdf
-courses/OOAD_Sp21/lectures/11- UML with Exercise.pdf
-courses/OOAD_Sp21/lectures/12_TestDrivenDevelopment.pdf
-courses/OOAD_Sp21/lectures/UMLclassDiagram_Solution.pdf
-courses/OOAD_Sp21/lectures/13-UML-part2.ppt
-courses/OOAD_Sp21/lectures/13-UML-part2.pdf
-courses/OOAD_Sp21/gradProjectMilestones/1_malwalaarachchigemalinda_LATE_381174_29504676_Malinda_ presentation-1.pdf
-courses/OOAD_Sp21/gradProjectMilestones/2_reynoldsjarek_289009_29458876_teamLazeradeSlides.pdf
-courses/OOAD_Sp21/gradProjectMilestones/bhasinakshita_340194_29468248_PPT_AbhijeetAkshitaAnusha_GradProjectMilestone1_TopicOutline.pdf
-courses/OOAD_Sp21/gradProjectMilestones/burkedevin_LATE_262551_29505383_CSCI5488_Proposal_Slides.pdf
-courses/OOAD_Sp21/gradProjectMilestones/chernindenver_268749_29405554_John_Denver_Milestone1_Presentation.pdf
-courses/OOAD_Sp21/gradProjectMilestones/hallockkevin_348691_29466216_grad-project-milestone1-presentation-hallock-yin-kulkarni-shankar.pdf
-courses/OOAD_Sp21/gradProjectMilestones/jensenemily_310790_29360303_Grad Track 2 project Slides.pdf
-courses/OOAD_Sp21/gradProjectMilestones/praharajkaran_370517_29502980_CSCI 5448 Presentation Milestone 1.pdf
-courses/OOAD_Sp21/gradProjectMilestones/z_albindreycey_362667_29461158_milestone1_presentation-1.pdf
-courses/OOAD_Sp21/lectures/15-XP.pdf
-courses/OOAD_Sp21/lectures/16_IntroToDesignPatterns.pdf
-courses/OOAD_Sp21/lectures/17-Observer.pdf
-courses/OOAD_Sp21/lectures/18-Observer.pdf
-courses/OOAD_Sp21/lectures/19-Decorator.pdf
-courses/OOAD_Sp21/Head_First_Design_Patterns_Second_Edition.pdf
-courses/OOAD_Sp21/lectures/20-Factory.pdf
-courses/OOAD_Sp21/SampleMidterm Exam_ Statistics_Bruce.pdf
-courses/OOAD_Sp21/lectures/21-Singleton.pdf
-courses/OOAD_Sp21/lectures/project/Milestone #2-DueFebruary 21.pdf
-courses/OOAD_Sp21/lectures/project/Milestone #3 Due March 5.pdf
-courses/OOAD_Sp21/lectures/project/Milestone #4_DueMarch19.pdf
-courses/OOAD_Sp21/lectures/23-Command.pdf
-courses/OOAD_Sp21/InformalEarlyFeedback_CSCI4448.docx
-courses/OOAD_Sp21/InformalEarlyFeedback_CSCI5448.docx
-courses/OOAD_Sp21/lectures/24-Command.pdf
-courses/OOAD_Sp21/lectures/25-Inspirations_CareerPaths.pdf
-courses/OOAD_Sp21/lectures/Inspirations_CareerPaths.odp
-courses/OOAD_Sp21/EIF_forms_results/University of Colorado Boulder Mail - please synthesize information from Early Informal Feedback.pdf
-courses/OOAD_Sp21/lectures/26-DesignPatternPrinciples.pdf
-courses/OOAD_Sp21/lectures/27-Refactoring.pdf
-courses/OOAD_Sp21/lectures/27-Refactoring.ppt
-courses/OOAD_Sp21/lectures/28-RefactoringResearch.pdf
-courses/OOAD_Sp21/lectures/29_Clones_Refactoring.pdf
-courses/OOAD_Sp21/lectures/30_Clones_Refactoring.pdf
-courses/OOAD_Sp21/lectures/31-CompositeAndVisitor.pdf
-courses/OOAD_Sp21/lectures/31-CompositeVisitor.ppt
-courses/OOAD_Sp21/Deleted_Milestone #6 Due Friday April 16.pdf
-courses/OOAD_Sp21/lectures/32-TemplateMethod-Facade-Adapter.pdf
-courses/OOAD_Sp21/lectures/32-TemplateMethod-Facade-Adapter.ppt
-courses/OOAD_Sp21/lectures/RefactoringResearch_all.pdf
-courses/OOAD_Sp21/lectures/33-ArchitecturalPatterns.pdf
-courses/OOAD_Sp21/lectures/33-ArchitecturalPatterns.ppt
-courses/OOAD_Sp21/Final Grad Project/02_Graduate Project Final - Liu and Praharaj.pdf
-courses/OOAD_Sp21/Final Grad Project/03_OOP_Grad_Milestone3_Results.pdf
-courses/OOAD_Sp21/Final Grad Project/04_Final Presentation- Denver & John.pdf
-courses/OOAD_Sp21/lectures/34-OOADcourseReview.pdf
-courses/OOAD_Sp21/lectures/34-OOADcourseReview.ppt
-courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_05-03-21_ParticipationOnly.csv
-courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_Reef_05-03-21_PerformanceAndParticipation.csv
-courses/OOAD_Sp21/lectures/iClickers/iClicker_GradesExport_ReefExtended_05-03-21.numbers
-courses/OOAD_Sp21/lectures/~$34-OOADcourseReview.ppt
-courses/OOAD_Sp21/lectures/grades/2021-05-07T1450_Grades-CSCI_4448-5448-001,003.csv
-*.xlsx
-*.csv
-*.xls
-courses/OOAD_Sp21/lectures/grades/gradesForRoster_5448_01.csv.sb-3f919454-4mNxTL/63EDDA10.MACTF
-courses/csci7000-005_F21/welcome.txt
-courses/OOAD_Sp21/lectures/FCQs/FCQs -4448- Campus Labs.pdf
-courses/OOAD_Sp21/lectures/FCQs/OfflineSection003- Campus Labs.pdf
-courses/OOAD_Sp21/~$ the CEAS Spalding Awards for TA Excellence committee.docx
+/courses/OOAD_Sp21
+/courses/csci7000-005_F21
+/courses/csci7000-008_Sp22
